Fix canvas overflow

--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -5,3 +5,7 @@ body {
 	width: 100vw;
 	height: 100vh;
 }
+
+canvas {
+    display: block;
+}
